--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Paul Florence <perso@florencepaul.com>"]
 description = "Easily communicate with Dongbu Robot servomotors Herkulex DRS 0101 and DRS 0201"
 license = "MIT OR Apache-2.0"
 readme = "README.md"
-keywords = ["Herkulex", "Dongbu Robot", "servo motor" ,"servomotor", "motors"]
+keywords = ["Herkulex", "Dongbu", "servo" ,"servomotor", "motor"]
 categories = ["embedded", "no-std", "hardware-support"]
 
 [dependencies]
